# rustdsa

./: Cargo.toml  README.md  pyproject.toml
docs/: datastructure_guide.md  introsort_guide.md
src/: lib.rs
src/algorithms/: sorting.rs
src/bindings/: mod.rs  sorting.rs
src/bindings/algorithms/: mod.rs  sorting.rs
src/bindings/datastructures/: array.rs  mod.rs
src/core/algorithms/: sorting.rs
src/core/datastructures/: array.rs  mod.rs
tests/: test_basic.py  test_datastructures.py
