[package]
name = "rustdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustdsa"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
rayon = "1.11.0"

[profile.release]
opt-level = 3
# lto = "fat"
# codegen-units = 1
# panic = "abort"
